--- a/Lopl's Quake Live configs/lopl.cfg
+++ b/Lopl's Quake Live configs/lopl.cfg
@@ -4,6 +4,8 @@
  // Bindings
 //
 
+seta cg_hudFiles "ui/hud.txt"
+loadhud
 
 bind TAB "+scores"
 bind ENTER "+button2"
@@ -20,6 +22,9 @@ bind SPACE "+moveup"
 bind MOUSE2 "+moveup"
 bind ALT "+speed"
 bind CTRL "+movedown"
+
+bind L "cl_timeNudge 0"
+bind K "cl_timeNudge -20"
 
 // Gauntlet, Rl, LG, Rail
 bind MOUSE3 "weapon 1"
@@ -51,6 +56,9 @@ bind MOUSE1 "+attack"
 bind MOUSE4 "+zoom"
 
 //Main shit
+seta r_gamma "0.8"
+bind = r_gamma "0.8"
+bind - r_gamma "0.7"
 
 seta sensitivity "2.1"
 seta cl_mouseAccel "0"
@@ -117,7 +125,6 @@ seta r_teleporterFlash "1"
 seta r_vertexLight "1"
 seta r_windowedMode "-1"
 seta r_mapOverBrightCap "255"
-seta r_gamma "0.7" // "0.8"
 
 //sound
 seta s_ambient "0"
@@ -146,7 +153,9 @@ seta cg_gunZ "-8"
 seta cg_gunY "3"
 seta cg_gunX "-10"
 seta cg_fov "95"
-//rail
+seta cg_bob "0"
+seta cg_drawgun "2"
+//rail 
 seta r_railWidth "16"
 seta r_railSegmentLength "32"
 seta r_railCoreWidth "6"
@@ -170,7 +179,7 @@ cg_smokeRadius_GL 0
 cg_smokeRadius_RL 0
 cg_smoke_SG 0 
 
-seta cg_drawGun "1"
+
 seta cg_fallKick "0"
 seta cg_forceColors "0"
 seta cg_gunOffset "1"
@@ -280,178 +289,20 @@ seta ch_Weaponswitch "8"
 seta cf_WeaponSwitch "12x12"
 seta cf_WeaponName "12x12"
 seta cf_AmmoStatusbar "10x10"
-seta s_loadas8bit "0"
-seta s_rolloff "1.0"
-seta s_distance "100.0"
-seta s_min_distance "1000.0"
-seta s_max_distance "1000.0"
-seta s_leafnum "0"
-seta s_refgain "0.45"
-seta s_refdelay "2.0"
-seta s_polykeep "1000000000"
-seta s_polysize "10000000"
-seta s_polyreflectsize "10000000"
-seta s_numpolys "400"
-seta s_bloat "2.0"
-seta s_occ_eq "0.75"
-seta s_compression "0"
-seta s_disable_a3d "1"
-seta s_enable_a3d "0"
-seta s_reflect "1"
-seta s_occlude "0"
-seta s_geometry "1"
-seta s_fogeq "0.8"
-seta s_watereq "0.2"
-seta s_2dvolume "0.7"
+
 seta r_vertexlighting "1"
-seta cg_draw3discons "0"
 seta r_preloadTextures "0"
-seta sv_leagueName ""
-seta sv_practice "0"
-seta sv_enableRankings "0"
-seta g_arenaScores ""
-seta g_arenaRank ""
-seta teamflags "0"
 seta r_loadscale "1"
 seta r_fixtjunctions "0"
-seta vm_forward "0.25"
-seta cg_hud_crosshairColor "0"
-seta ch_0kupitem "0"
-seta vote_percent "50"
-seta vote_limit "5"
-seta mode_file "none"
-seta map_queue "1"
-seta hook_enable "0"
-seta warmup_armor "100"
-seta match_overtime "1"
-seta match_mutespecs "0"
-seta match_lateJoin "0"
-seta match_cawarmupfire "1"
-seta match_carespawn "0"
-seta server_thrufloors "0"
-seta server_record "0"
-seta server_realping "1"
-seta server_promode "0"
-seta server_ospauth "0"
-seta server_nudgemax "-30"
-seta server_nudgemin "30"
-seta server_maxpacketsmax "125"
-seta server_maxpacketsmin "30"
-seta server_customclient "15"
-seta item_disable "4"
-seta log_default "1"
-seta powerup_disable "0"
-seta match_timeoutlength "210"
-seta match_timeoutcount "3"
-seta match_readypercent "100"
-seta g_quadfactor "3"
-seta g_forcerespawn "20"
-seta cg_hud_weaponListFlash "1"
-seta cg_hud_weaponListDrawAll "0"
-seta cg_hud_weaponListBackground "1"
-seta cg_hud_weaponList "1"
-seta cg_hud_teamBackground "1"
-seta cg_hud_fragMessage "1"
-seta cg_hud_drawPickup "1"
-seta cg_hud_crosshairTeamInfo "1"
+
 seta cg_lowEffects "1"
-seta g_syncronousClients "0"
-seta g_pro_style "2"
 seta cg_drawstrips "0"
 seta cg_show2d "1"
 seta cg_gun "1"
 seta cg_hud_drawWarmup "1"
 seta cg_pmove_fixed "0"
 seta cg_worldchatbeep "0"
-seta ui_browserLocation "0"
-seta cf_statusbarammo "12x12"
-seta cg_altligthing "0"
-seta cg_drawKiller "0"
-seta cg_hud "0"
-seta com_blindlyLoadDLLS "1"
-seta freelook "1"
-seta cg_125Hz "0"
-seta r_segmentlength "1"
-seta lagometer "0"
-seta enableosphud "0"
-seta cg_impactvibration "0"
-seta gl_polyblend "0"
-seta r_drawstrips "1"
-seta cg_enemycolor "iiii"
-seta log_stat "0"
-seta mode_default ""
-seta team_maxplayers "4"
-seta nohealth "0"
-seta con_drawnotify "5"
 
-seta viewsize "100"
-seta ui_master "0"
-seta r_ext_compress_textures "1"
-seta cg_drawPing "0"
-seta ch_consoleTeamChat "1"
-seta ch_consoleTime "2500"
-seta ch_drawFollow "1"
-seta ch_skinScores "0"
-seta ch_weaponListSeparator "74"
-seta cf_Console "7x12"
-seta color "0"
-seta cl_allowDownload "0"
-seta vm_ui "0"
-seta vm_cgame "0"
-seta vm_game "0"
-seta scr_conspeed "999"
-seta r_lodScale "5"
-seta zmq_rcon_password ""
-seta zmq_stats_password ""
-seta net_socksPassword ""
-seta net_socksUsername ""
-seta net_socksPort "1080"
-seta net_socksServer ""
-seta net_socksEnabled "0"
-seta net_noudp "0"
-seta ui_lightingModelPreset ""
-seta ui_marksPreset ""
-seta ui_screenDamage_preset ""
-seta ui_screenDamage_Team_preset ""
-seta ui_drawRewards ""
-seta ui_lowAmmoPreset ""
-seta ui_impactSparks ""
-seta ui_globalpreset ""
-seta ui_tourney_timelimit "15"
-seta ui_tourney_fraglimit "0"
-seta ui_teamUpperColor "96"
-seta ui_teamName "Pagans"
-seta ui_teamLowerColor "96"
-seta ui_teamHeadColor "96"
-seta ui_teamColor "0"
-seta ui_team_timelimit "20"
-seta ui_team_friendly "1"
-seta ui_team_fraglimit "0"
-seta g_spVideos ""
-seta g_spScores5 ""
-seta g_spScores4 ""
-seta g_spScores3 ""
-seta g_spScores2 ""
-seta g_spScores1 ""
-seta g_spSkill "2"
-seta g_spAwards ""
-seta ui_serverStatusTimeOut "7000"
-seta server16 ""
-seta server15 ""
-seta server14 ""
-seta server13 ""
-seta server12 ""
-seta server11 ""
-seta server10 ""
-seta server9 ""
-seta server8 ""
-seta server7 ""
-seta server6 ""
-seta server5 ""
-seta server4 ""
-seta server3 ""
-seta server2 ""
-seta server1 ""
 
 seta r_textureBits "32"
 seta r_swapInterval "0"
