--- a/Lopl's Quake Live configs/lopl.cfg
+++ b/Lopl's Quake Live configs/lopl.cfg
@@ -75,6 +75,7 @@ seta in_mouse "2"
 
 seta country "IT"
 
+seta cg_stats 0
 seta con_background 0
 seta con_height 0.7
 seta con_opacity 0.4
@@ -92,9 +93,9 @@ seta cg_forceTeamModel xaero
 seta model anarki/sport_red
 seta headmodel anarki/sport_red
 
-seta cg_enemyHeadcolor 0xffff00ff
-seta cg_enemyUppercolor 0xffff00ff
-seta cg_enemyLowercolor 0xffff00ff
+seta cg_enemyUpperColor "0xffffffff"
+seta cg_enemyLowerColor "0xffffffff"
+seta cg_enemyHeadColor "0xffffffff"
 
 seta cg_teamUpperColor "0x8080ffff"
 seta cg_teamLowerColor "0x8080ffff"
@@ -133,7 +134,7 @@ seta s_volume "0.1"
 seta cg_HitBeep "2"
 
 seta com_blood "0"
-
+seta cg_blood "0"
 //xhair
 seta cg_drawCrosshair "6"
 seta cg_drawCrosshairNames "1"
@@ -314,7 +315,7 @@ seta r_roundImagesDown "1"
 seta r_primitives "0"
 seta r_overBrightBits "1"
 seta r_noFastRestart "0"
-seta r_mode "23"
+seta r_mode "14"
 seta r_mapOverBrightBits "1"
 seta r_intensity "1"
 seta r_ignoreHWGamma "1"
@@ -338,8 +339,8 @@ seta r_drawSkyFloor "1"
 seta r_displayRefresh "0"
 seta r_detailtextures "1"
 seta r_depthBits "0"
-seta r_customHeight "1080"
-seta r_customWidth "1920"
+seta r_customHeight "720"
+seta r_customWidth "1280"
 seta r_contrast "1.0"
 seta r_colorBits "32"
 seta r_aspectRatio "1"
@@ -393,6 +394,7 @@ seta cg_screenDamage_Team "0x000000ff"
 seta cg_screenDamage_Self "0x00000000"
 seta cg_screenDamage "0x000000ff"
 seta cg_scorePlums "0"
+seta cg_damagePlum "0"
 seta cg_rocketStyle "1"
 seta ui_recordSPDemo "0"
 
@@ -419,10 +421,10 @@ seta cg_killBeep "7"
 seta cg_kickScale "0.00"
 seta cg_itemTimers "1"
 seta cg_itemFx "7"
-seta cg_impactSparksVelocity "-104"
-seta cg_impactSparksSize "8"
-seta cg_impactSparksLifetime "250"
-seta cg_impactSparks "1"
+seta cg_impactSparksVelocity "128"
+seta cg_impactSparksSize "2"
+seta cg_impactSparksLifetime "0"
+seta cg_impactSparks "0"
 seta cg_impactMarkTime "10000"
 
 
