--- a/Lopl's Quake Champions configs/input.cfg
+++ b/Lopl's Quake Champions configs/input.cfg
@@ -1,6 +1,6 @@
 {
    "Input": {
-      "mouseRotateSensitivityCoef": 2.0999999046325684,
+      "mouseRotateSensitivityCoef": 0.9,
       "mouseRotateInvertVertical": false
    },
    "cfg_version": 1
